add rates endpoint
